[workspace]
members = [
    "market_ws_binance_spot",
    "market_ws_binance_snapshot",
    "market_ws_aggregator",
    "market_ws_glassnode_adapter",
    "market_ws_coinmarketcap_adapter",
    "market_feed_dispatcher",
    "strategy_core_engine",
    "strategy_runtime_env",
    "strategy_backtest_engine",
    "strategy_signal_dispatcher",
    "risk_throttle_manager",
    "risk_dynamic_configurator",
    "risk_ip_whitelist_manager",
    "oms_core",
    "oms_orderbook_mirror",
    "oms_pretrade_risk_checker",
    "oms_retry_engine",
    "latency_event_timer",
    "latency_collector",
    "latency_rtt_monitor",
    "log_writer",
    "metrics_exporter",
    "alert_engine",
    "conn_binance_monitor",
    "conn_failover_router",
    "conn_socket_tuner",
    "persistence_trade_logger",
    "persistence_snapshot_store",
    "coldstart_recovery_loader",
    "config_api_server",
    "config_file_watcher",
    "config_distributor",
    "event_nats",
    "event_router"
]
