[package]
name = "market_ws_coinmarketcap_adapter"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mongodb = "2.8.2"
chrono = "0.4"
bson = "2.14.0"
rand = "0.8"
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
tracing-appender = "0.2"


